--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev-laravel": "vite",
+        "dev": "npx tailwindcss -i resources/css/app.css -o public/output.css --watch"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0"
     }
 }
